--- a/src/web.public/public/stylesheets/partials/_mixins.scss
+++ b/src/web.public/public/stylesheets/partials/_mixins.scss
@@ -119,6 +119,15 @@
   }
 }
 
+@mixin light-main-spot-colour-gradient-background {
+  @include linear-gradient(to top, #eee, white, $fallback: white);
+  text-shadow: 0px 1px 0px darken(white, 30);
+
+  &:active {
+    @include linear-gradient(to top, darken(#daa537, 15), darken(#d5b168, 15), $fallback: darken(#daa537, 15));
+  }
+}
+
 @mixin akin-fancy-button {
   display: block;
   margin: 0px;
@@ -145,7 +154,6 @@
   font-weight: normal;
   @include small-body-text;
   color: $alt-black-colour;
-  display: inline-block;
   padding-left: 12px;
   padding-right: 12px;
   text-align: center;
