category chart page margin bugfix

--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -433,6 +433,12 @@ h2 {
   }
 
   .app-summary-body-wrapper {
+    margin-left: $large-category-result-icon-dim + 6px;
+
+    @include mq($from: mobile-landscape) {
+      margin-left: (($large-category-result-icon-dim + 6px) * 2) + 3px;
+    }
+
     p {
       @include small-body-text;
     }
