changes to category search results, including initial attempt at more button. Hacks for excluding categories

--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -28,6 +28,7 @@ $large-category-result-icon-dim: 57px; // TODO rename
 
 // ICONS
 
+$add-icon: "*";
 $cross-icon: "+";
 $search-icon: "!";
 $category-icon: "=";
