--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -214,6 +214,14 @@ h2 {
         clear: both;
       }
     }
+
+    .category-apps-row-end.two-in-row.three-in-row {
+      @include mq($from: tablet) {
+        display: block;
+        height: 1px;
+        clear: both;
+      }
+    }
   }
 
   .category-search-actions-wrapper {
