--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -98,17 +98,10 @@ h1 {
 }
 
 h1 a.basic-button {
-
   position: absolute;
   bottom: 6px;
   right: 0px;
-  //border-color: $main-spot-colour;
-  //color: $main-spot-colour;
-
-
-  //@include akin-fancy-button;
   @include light-main-spot-colour-gradient-background;
-  //width: 46px;
   background-color: black;
   color: $main-spot-colour;
   @include control-border;
@@ -122,11 +115,6 @@ h1 a.basic-button {
   display: block;
   border-color: $main-spot-colour;
   text-shadow: none;
-}
-
-h1 a.basic-button:active {
-  //background-color: $main-spot-colour;
-  //color: white;
 }
 
 #category h1 {
@@ -250,21 +238,8 @@ h2 {
       .category-chart-link {
         display: inline-block;
         margin-right: 5px;
-        //text-align: right;
         @include h3-title-small-narrow;
       }
-
-//      .category-chart-icon {
-//        float: right;
-//        width: 18px;
-//      }
-//
-//      .category-chart-icon:after {
-//        @include small-icon;
-//        color: $light-drawing-colour; // lighten($main-spot-colour, 20);
-//        @include icon($category-icon);
-//        //margin-top: 3px;
-//      }
     }
 
     .category-chart-wrapper:after {
@@ -274,65 +249,6 @@ h2 {
       line-height: 22px;
       margin-left: 0px;
     }
-
-//    .category-chart-wrapper:after {
-//      @include small-icon;
-//      color: $light-drawing-colour; // lighten($main-spot-colour, 20);
-//      @include icon($category-icon);
-//      //margin-top: 3px;
-//    }
-
-//    .category-chart-icon {
-//      display: table-cell;
-//      min-width: 18px;
-//    }
-
-//
-//
-//    position: relative;
-//
-//    .more-results-link {
-//      position: absolute;
-//      left: 16px;
-//      top: 2px;
-//      line-height: 22px;
-//      @include small-body-text;
-//    }
-//
-//    .more-results-icon:before {
-//      @include small-icon;
-//      color: $main-spot-colour; // lighten($main-spot-colour, 20);
-//      @include icon($add-icon);
-//      //padding-top: 5px;
-//      line-height: 22px;
-//      margin-right: 0px;
-//      //vertical-align: middle;
-//      text-decoration: none !important;
-//    }
-//
-//    .category-chart-link {
-//      @include body-text;
-//      line-height: 22px;
-//      float: right;
-//      text-align: right;
-//      margin-left: 50px;
-//      margin-right: 5px;
-//    }
-//
-//    .category-chart-icon {
-//      float: right;
-//      width: 18px;
-//      padding-top: 1px;
-//      //height: 18px;
-//    }
-//
-//    .category-chart-icon:after {
-//      @include small-icon;
-//      color: $light-drawing-colour; // lighten($main-spot-colour, 20);
-//      @include icon($category-icon);
-//      //margin-top: 3px;
-//      text-decoration: none !important;
-//    }
   }
 }
 
@@ -407,7 +323,8 @@ h2 {
 }
 
 .category-search-app-summary,
-.app-search-app-summary {
+.app-search-app-summary,
+.category-app-summary {
   .app-summary-sidebar-wrapper {
     .position {
       border: 1px solid $main-spot-colour;
@@ -529,29 +446,23 @@ h2 {
     }
 
     .position {
-      padding: 1px 0px 1px 0px;
-      font-weight: bold;
-      margin-left: 0px;
-      margin-bottom: 3px;
-      text-align: center;
-      border: 2px solid $main-spot-colour;
-      color: $main-spot-colour;
-      @include centred-margins;
-      width: 40px;
-      height: 40px;
-      @include border-top-radius(9px);
-      @include border-bottom-radius(9px);
-      line-height: 34px;
+      margin-left: 0px !important;
+
+      @include mq($to: mobile-landscape) {
+        margin-bottom: 4px;
+        font-size: 14px;
+        line-height: 20px;
+      }
 
       @include mq($from: mobile-landscape) {
         float: left;
-        width: 40px;
-        height: 40px;
-        @include border-top-radius(9px);
-        @include border-bottom-radius(9px);
-        line-height: 34px;
+        display: block;
+        width: 48px;
+        height: 30px;
         margin-left: 8px;
-        margin-top: 9px;
+        margin-top: 15px;
+        @include small-body-text;
+        line-height: 28px;
       }
     }
 
