--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -13,6 +13,7 @@ $error-colour: #a03d34;
 $warning-colour: $alt-spot-colour;
 $main-links-colour: $main-spot-colour; // darken($alt-spot-colour, 10);
 $disabled-text-colour: #bbb;
+$deemphasized-text-colour: #888;
 $normal-border-radius: 6px;
 $body-font-family: 400 16px/1.6 'Noto Sans', sans-serif;
 $header-font-family: 400 60px/1.3 'Bree Serif', Georgia, serif;
